--- a/Dataset2/Boosting_Algorithm_Adaboost.ipynb
+++ b/Dataset2/Boosting_Algorithm_Adaboost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,13 @@
     "from sklearn.metrics import f1_score, roc_curve\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
     "from sklearn.metrics import f1_score, roc_curve"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +51,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Custom implementation of AdaBoost algorithm\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,19 +174,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy = 0.7245063291139241\n"
+      "Accuracy custom implementation = 0.845513413506013\n"
      ]
     }
    ],
    "source": [
     "# Calculate accuracy \n",
+    "\n",
+    "correct_pred = 0\n",
     "\n",
     "for item_index in range(np.shape(y_test_pred)[0]):\n",
     "\n",
@@ -186,12 +196,12 @@
     "\n",
     "            correct_pred = correct_pred + 1 \n",
     "            \n",
-    "print(\"Accuracy = \" + str(correct_pred/number_samples))"
+    "print(\"Accuracy custom implementation = \" + str(correct_pred/np.shape(y_test_pred)[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +213,74 @@
     }
    ],
    "source": [
-    "f1_score = f1_score(y_test, y_test_pred, average='weighted')\n",
+    "f1_score = f1_score(y_test, y_test_pred.astype(int), average='weighted')\n",
+    "print(\"F1 Score Adaboost: \" + str(f1_score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sklearn implementation of AdaBoost Algorithm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifier = AdaBoostClassifier(DecisionTreeClassifier(max_depth=1),n_estimators=100)\n",
+    "classifier.fit(X_train, y_train)\n",
+    "predictions = classifier.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy sklearn implementation = 0.8572309589885908\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate accuracy \n",
+    "\n",
+    "correct_pred = 0\n",
+    "\n",
+    "for item_index in range(np.shape(predictions)[0]):\n",
+    "\n",
+    "        if predictions[item_index] == y_test[item_index]:\n",
+    "\n",
+    "            correct_pred = correct_pred + 1 \n",
+    "            \n",
+    "print(\"Accuracy sklearn implementation = \" + str(correct_pred/np.shape(y_test_pred)[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.float64' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-45-769812608eeb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mf1_score\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf1_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maverage\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'weighted'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"F1 Score Adaboost: \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf1_score\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'numpy.float64' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "f1_score = f1_score(y_test, predictions, average='weighted')\n",
     "print(\"F1 Score Adaboost: \" + str(f1_score))"
    ]
   }
