Adding sections to Write-Up

--- a/WriteUp/report.tex
+++ b/WriteUp/report.tex
@@ -43,31 +43,57 @@ component, formatting, style, styling, insert
 \end{IEEEkeywords}
 
 \section{Introduction}
-This document is a model and instructions for \LaTeX.
-Please observe the conference page limits. 
+Blabla
 
-\section{Ease of Use}
+\subsection{Motivation}
+Blabla
 
-\subsection{Maintaining the Integrity of the Specifications}
+\subsection{Methodology}
+Blabla
 
-The IEEEtran class file is used to format your paper and style the text. All margins, 
-column widths, line spaces, and text fonts are prescribed; please do not 
-alter them. You may note peculiarities. For example, the head margin
-measures proportionately more than is customary. This measurement 
-and others are deliberate, using specifications that anticipate your paper 
-as one part of the entire proceedings, and not as an independent document. 
-Please do not revise any of the current designations.
+\subsection{Accomplishments}
+Blabla
 
-\section{Prepare Your Paper Before Styling}
-Before you begin to format your paper, first write and save the content as a 
-separate text file. Complete all content and organizational editing before 
-formatting. Please note sections \ref{AA}--\ref{SCM} below for more information on 
-proofreading, spelling and grammar.
+\section{Overview of Techniques}
+Blabla 
 
-Keep your text and graphic files separate until after the text has been 
-formatted and styled. Do not number text heads---{\LaTeX} will do that 
-for you.
+\subsection{Undersampling}
+Blabla
 
+\subsection{Oversampling}
+Blabla
+
+\subsection{Cost-Sensitive Techniques}
+Blabla
+
+\section{Classification impact on Real Data}
+Blabla 
+
+\subsection{Bagging}
+Blabla
+
+\subsection{AdaBoost}
+Blabla
+
+\subsection{AdaCost}
+Blabla
+
+\subsection{Boosting SVM}
+Blabla
+
+\subsection{AdaMEC}
+Blabla
+
+\subsection{XGBoost}
+Blabla
+
+\section{Results and Discussion}
+Blabla 
+
+\section{Conclusions}
+Blabla 
+
+\break
 \subsection{Abbreviations and Acronyms}\label{AA}
 Define abbreviations and acronyms the first time they are used in the text, 
 even after they have been defined in the abstract. Abbreviations such as 
