--- a/Dataset2/Bagging_Algorithms.ipynb
+++ b/Dataset2/Bagging_Algorithms.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,130 +44,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Number of classifiers to aggregate\n",
+    "class Bagging_classifier:\n",
+    "    def __init__(self, type_classifier, x=None, y=None, n_iterations = 20, ratio=0.1):\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        type_classifier: DecisionTree, KNN, SVM, GaussianNB\n",
+    "        \"\"\"\n",
+    "        self.number_iterations = n_iterations\n",
+    "        self.type_classifier = type_classifier \n",
+    "        \n",
+    "        self.ratio = ratio #Ratio Bootstrapped dataset/ original dataset\n",
+    "        \n",
+    "                \n",
+    "    def fit(self,X_train,y_train):\n",
+    "        \n",
+    "        dataset_train = np.concatenate((X_train.to_numpy(), y_train),axis = 1)\n",
+    "        N = np.shape(dataset_train)[0]\n",
+    "        \n",
+    "        # There will be as many classifier models as iterations\n",
+    "        self.classifier_models = np.zeros(shape=self.number_iterations, dtype=object)\n",
+    "        \n",
+    "        for classifier_iteration in range(self.number_iterations):\n",
+    "    \n",
+    "            dataset_train_undersampled = dataset_train[random.sample(range(1,N),int(self.ratio*N)), :]\n",
     "\n",
-    "num_classifiers = 20\n",
-    "\n",
-    "ratio = 0.1 #Ratio Bootstrapped dataset/ original dataset\n",
-    "\n",
-    "N = np.shape(dataset_train)[0]\n",
-    "\n",
-    "# Initialize accuracy vectors\n",
-    "\n",
-    "decision_tree_accuracy = []\n",
-    "KNN_accuracy = []\n",
-    "SVM_accuracy = []\n",
-    "GNB_accuracy = []\n",
-    "\n",
-    "decision_tree_f1_score = []\n",
-    "KNN_f1_score = []\n",
-    "SVM_f1_score = []\n",
-    "GNB_f1_score = []\n",
+    "            X_train_undersampled = dataset_train_undersampled[:,0:59]\n",
+    "            y_train_undersampled = dataset_train_undersampled[:,59].astype(int)\n",
     "\n",
     "\n",
-    "for classifier_iteration in range(num_classifiers):\n",
-    "    \n",
-    "    dataset_train_undersampled = dataset_train[random.sample(range(1,N),int(ratio*N)), :]\n",
-    "    \n",
-    "    X_train_undersampled = dataset_train_undersampled[:,0:59]\n",
-    "    y_train_undersampled = dataset_train_undersampled[:,59].astype(int)\n",
-    "    \n",
-    "    \n",
-    "    ### Train different algorithms\n",
-    "    \n",
-    "    # Decision tree\n",
-    "    decision_tree = DecisionTreeClassifier(max_depth=1, max_leaf_nodes=2)\n",
-    "    decision_tree_model = decision_tree.fit(X_train_undersampled, y_train_undersampled)\n",
-    "    \n",
-    "    decision_tree_pred = decision_tree_model.predict(X_test)\n",
-    "    \n",
-    "    decision_tree_accuracy.append(accuracy_score(y_test, decision_tree_pred))\n",
-    "    \n",
-    "    decision_tree_f1_score.append(f1_score(y_test, decision_tree_pred,average='weighted'))\n",
-    "    \n",
-    "    # K-NN\n",
-    "    KNN = KNeighborsClassifier(n_neighbors=3)\n",
-    "    KNN_model = KNN.fit(X_train_undersampled, y_train_undersampled)\n",
-    "    \n",
-    "    KNN_pred = KNN_model.predict(X_test)\n",
-    "    \n",
-    "    KNN_accuracy.append(accuracy_score(y_test, KNN_pred))\n",
-    "    \n",
-    "    KNN_f1_score.append(f1_score(y_test, KNN_pred,average='weighted'))\n",
-    "    \n",
-    "    # SVM\n",
-    "    SVM = make_pipeline(StandardScaler(), SVC(gamma='auto'))\n",
-    "    SVM_model = SVM.fit(X_train_undersampled, y_train_undersampled)\n",
-    "    \n",
-    "    SVM_pred = SVM_model.predict(X_test)\n",
-    "    \n",
-    "    SVM_accuracy.append(accuracy_score(y_test, SVM_pred))\n",
-    "    \n",
-    "    SVM_f1_score.append(f1_score(y_test, SVM_pred,average='weighted'))\n",
-    "    \n",
-    "    # Bayes    \n",
-    "    GNB = GaussianNB()\n",
-    "    GNB_model = GNB.fit(X_train_undersampled, y_train_undersampled)\n",
-    "    \n",
-    "    GNB_pred = GNB_model.predict(X_test)\n",
-    "    \n",
-    "    GNB_accuracy.append(accuracy_score(y_test, GNB_pred))\n",
-    "    \n",
-    "    GNB_f1_score.append(f1_score(y_test, GNB_pred,average='weighted'))\n",
+    "            ### Train different algorithms\n",
+    "\n",
+    "            # Decision tree\n",
+    "            if self.type_classifier == \"DecisionTree\": \n",
+    "                classifier = DecisionTreeClassifier(max_depth=1, max_leaf_nodes=2)\n",
+    "                classifier_model = classifier.fit(X_train_undersampled, y_train_undersampled)\n",
+    "\n",
+    "\n",
+    "            # K-NN\n",
+    "            elif self.type_classifier == \"KNN\":\n",
+    "                classifier = KNeighborsClassifier(n_neighbors=3)\n",
+    "                classifier_model = classifier.fit(X_train_undersampled, y_train_undersampled)\n",
+    "\n",
+    "        \n",
+    "            # SVM\n",
+    "            elif self.type_classifier == \"SVM\":\n",
+    "                classifier = make_pipeline(StandardScaler(), SVC(gamma='auto'))\n",
+    "                classifier_model = classifier.fit(X_train_undersampled, y_train_undersampled)\n",
+    "\n",
+    "            # Gaussian Naive Bayes    \n",
+    "            elif self.type_classifier == \"GaussianNB\":\n",
+    "                classifier = GaussianNB()\n",
+    "                classifier_model = classifier.fit(X_train_undersampled, y_train_undersampled) \n",
+    "            else:\n",
+    "                print(\"Wrong classifier selection\")\n",
+    "                return\n",
+    "                \n",
+    "            self.classifier_models[classifier_iteration] = classifier_model\n",
+    "        \n",
+    "        return\n",
     "    \n",
     "    \n",
-    "    \n",
-    "    "
+    "    def predict(self,X_test):\n",
+    "        \n",
+    "        model_preds = np.array([model.predict(X_test) for model in self.classifier_models])\n",
+    "        y_test_pred = np.rint(np.mean(model_preds,axis = 0))\n",
+    "        return y_test_pred.astype(int)\n",
+    "            \n",
+    "#         accuracy = accuracy_score(y_test, y_test_pred)\n",
+    "#         f1_score = f1_score(y_test, y_test_pred, average='weighted')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decision tree accuracy: 0.7987049028677149\n",
-      "KNN accuracy: 0.7015058073799981\n",
-      "SVM accuracy: 0.7684551341350601\n",
-      "Gaussian NB accuracy: 0.7095436324390996\n"
+      "Accuracy with Bagging: 0.8011\n",
+      "F1 Score with Bagging: 0.7927\n"
      ]
     }
    ],
    "source": [
-    "print(\"Decision tree accuracy: \"+str(sum(decision_tree_accuracy) / len(decision_tree_accuracy)))\n",
-    "print(\"KNN accuracy: \"+str(sum(KNN_accuracy) / len(KNN_accuracy)))\n",
-    "print(\"SVM accuracy: \"+str(sum(SVM_accuracy) / len(SVM_accuracy)))\n",
-    "print(\"Gaussian NB accuracy: \"+str(sum(GNB_accuracy) / len(GNB_accuracy)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Decision tree F1 score: 0.7900923672862227\n",
-      "KNN F1 score: 0.6873391436392572\n",
-      "SVM F1 score: 0.7340907038358309\n",
-      "Gaussian NB F1 score: 0.6781254118200644\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Decision tree F1 score: \"+str(sum(decision_tree_f1_score) / len(decision_tree_f1_score)))\n",
-    "print(\"KNN F1 score: \"+str(sum(KNN_f1_score) / len(KNN_f1_score)))\n",
-    "print(\"SVM F1 score: \"+str(sum(SVM_f1_score) / len(SVM_f1_score)))\n",
-    "print(\"Gaussian NB F1 score: \"+str(sum(GNB_f1_score) / len(GNB_f1_score)))"
+    "BaggingClassifier = Bagging_classifier(type_classifier=\"DecisionTree\")\n",
+    "\n",
+    "BaggingClassifier.fit(X_train, y_train)\n",
+    "\n",
+    "Bagging_pred = BaggingClassifier.predict(X_test)\n",
+    "print('Accuracy with Bagging: %.4f' % (np.shape(np.where(y_test.flatten()==Bagging_pred))[1]/np.shape(y_test.flatten())[0]))\n",
+    "print('F1 Score with Bagging: %.4f' % (f1_score(y_test, Bagging_pred, average='weighted')))\n"
    ]
   }
  ],
