--- a/Dataset2/Bagging_Algorithms.ipynb
+++ b/Dataset2/Bagging_Algorithms.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +39,16 @@
     "test_size = 0.33\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size, random_state=seed)\n",
     "\n",
+    "# Labels for this algortihm has to be either 1 or -1\n",
+    "y_train = np.where(y_train < 0.5, -1, 1)\n",
+    "y_test = np.where(y_test < 0.5, -1, 1)\n",
+    "\n",
     "dataset_train = np.concatenate((X_train.to_numpy(), y_train),axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +115,7 @@
     "    def predict(self,X_test):\n",
     "        \n",
     "        model_preds = np.array([model.predict(X_test) for model in self.classifier_models])\n",
-    "        y_test_pred = np.rint(np.mean(model_preds,axis = 0))\n",
+    "        y_test_pred = np.sign(np.mean(model_preds,axis = 0))\n",
     "        return y_test_pred.astype(int)\n",
     "            \n",
     "#         accuracy = accuracy_score(y_test, y_test_pred)\n",
@@ -121,15 +125,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy with Bagging: 0.8011\n",
-      "F1 Score with Bagging: 0.7927\n"
+      "Accuracy with Bagging: 0.7995\n",
+      "F1 Score with Bagging: 0.7912\n"
      ]
     }
    ],
@@ -142,6 +146,13 @@
     "print('Accuracy with Bagging: %.4f' % (np.shape(np.where(y_test.flatten()==Bagging_pred))[1]/np.shape(y_test.flatten())[0]))\n",
     "print('F1 Score with Bagging: %.4f' % (f1_score(y_test, Bagging_pred, average='weighted')))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
