--- a/WriteUp/report.tex
+++ b/WriteUp/report.tex
@@ -7,6 +7,12 @@
 \usepackage{graphicx}
 \usepackage{textcomp}
 \usepackage{xcolor}
+
+% Enable subfigures
+\graphicspath{ {./pictures/} }
+\usepackage{subcaption}
+\captionsetup{compatibility=false}
+
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
@@ -33,38 +39,146 @@ cpeces3@gatech.edu}
 \maketitle
 
 \begin{abstract}
-This document is a model and instructions for \LaTeX.
-This and the IEEEtran.cls file define the components of your paper [title, text, heads, etc.]. *CRITICAL: Do Not Use Symbols, Special Characters, Footnotes, 
-or Math in Paper Title or Abstract.
+This document analyzes the impact of imbalanced datasets on machine learning classifiers. It discusses several techniques to deal with the imbalance. The results are applied to train a Twitter fake account detection algorithm where the performance of these techniques is compared. 
 \end{abstract}
 
 \begin{IEEEkeywords}
-component, formatting, style, styling, insert
+imbalance
 \end{IEEEkeywords}
 
 \section{Introduction}
-Blabla
+	\subsection{Motivation}
+	Many canonical machine learning algorithms used for classification assume that the number of objects in the respective classes is roughly the same. However, in reality, classes are rarely represented equally. In fact, class distribution skews are not only common, but many times expected \cite{data_imbalance_overview}, especially in decision systems aiming to detect rare but important cases. For instance, Covid-19 testing at Georgia Institute of Technology showed that less than 1\% of the samples contained the virus. This means that a naive classifier could achieve a 99\% accuracy just by labeling all samples as negative for Covid-19.
+	
+	\medskip
+Imbalanced datasets significantly compromise the performance of many traditional learning algorithms. The disparity of classes in the training dataset may lead the algorithm to bias the classification towards the class with more instances, or even to ignore the minority class altogether. Therefore, it is vital to find efficient ways of dealing with data imbalances.
 
-\subsection{Motivation}
-Blabla
+	\medskip
+	The overall goal of our project is to provide an overview of the state-of-the-art approaches to solve the issues introduced by imbalanced datasets. Including, a performance comparison of the various techniques. We also aim to implement an efficient scheme that is able to deal with highly complex and imbalanced datasets.
 
-\subsection{Methodology}
-Blabla
 
-\subsection{Accomplishments}
-Blabla
+	\subsection{Methodology}
+	Firstly, we study a synthetic dataset characterized by its simplicity. It is made up of two classes following $N(\boldsymbol\mu_0, \Sigma_0)$ and $N(\boldsymbol\mu_1, \Sigma_1))$, where
+			\begin{equation*}
+				\boldsymbol\mu_0=
+				\begin{pmatrix}
+					-1\\
+					-0.5
+				\end{pmatrix},\ %\quad
+				\boldsymbol\mu_1=
+				\begin{pmatrix}
+					0\\
+					1
+				\end{pmatrix},\ %\quad \\
+				\Sigma_0=
+				\begin{pmatrix}
+					1 & 0\\
+					0 & 1
+				\end{pmatrix},\ %\quad %\mathrm{ and }\quad
+				\Sigma_1=
+				\begin{pmatrix}
+					4 & 0\\
+					0 & 2
+				\end{pmatrix}
+			\end{equation*} and where the minority class only accounts for 15\% of the samples. This simple dataset is especially useful to analyze the imbalance-compensating techniques from a mathematical perspective. Not only do we study the concepts learnt in class at a theoretical level, but we also use plugin machine learning models to illustrate how they affect density distributions.
 
-\section{Overview of Techniques}
-Blabla 
+		\medskip
+		Secondly, we target a more complex dataset. 
 
-\subsection{Undersampling}
-Blabla
+		\medskip
+		The performance of the classification will be evaluated using the $F_1$ score $\in [0, 1]$, where the best possible score is 1. This metric is computed as
+			\begin{equation*}
+				F_1 = 2\frac{\mathrm{precision}\times\mathrm{recall}}{\mathrm{precision}+\mathrm{recall}},
+			\end{equation*}
+where the precision is the ratio between correctly identified minority samples and the total number of minority samples, while the recall is given by the fraction of correctly identified minority samples over all samples.
 
-\subsection{Oversampling}
-Blabla
+	\subsection{Accomplishments}
 
-\subsection{Cost-Sensitive Techniques}
-Blabla
+
+\section{Overview of the techniques}
+	\subsection{Undersampling}
+		Undersampling is frequently employed to balance datasets before any machine learning algorithm is applied. Undersampling involves randomly removing entries from the majority class. Figure \ref{fig:Undersampling_2D_OriginalHistograms} shows the effects of undersampling on the Gaussian training dataset. The class imbalance is somewhat countered. However, the algorithm learnt from this undersampled dataset will be affected. Namely, its ability to generalize and its posterior distribution.
+			\begin{figure}
+			     \centering
+			     \begin{subfigure}[b]{0.24\textwidth}
+			         \centering
+			         \includegraphics[width=\textwidth]{Undersampling_2D_OriginalDataset}
+			         \caption{Original.}
+			         \label{fig:Undersampling_2D_OriginalDataset}
+			     \end{subfigure}
+			     \hfill
+			     \begin{subfigure}[b]{0.24\textwidth}
+			         \centering
+			         \includegraphics[width=\textwidth]{Undersampling_2D_UndersampledDataset}
+			         \caption{Undersampled. $\beta=0.25$.}
+			         \label{fig:Undersampling_2D_UndersampledDataset}
+			     \end{subfigure}
+			        \caption{Gaussian dataset.}
+			        \label{fig:Undersampling_2D_OriginalHistograms}
+			\end{figure}
+
+	\medskip
+	\subsubsection{Generalization Ability}
+		Induction algorithms require a sufficient amount of data to learn a model that generalizes well.  If the training set is not large, a classifier may just memorize the characteristics of the training data. Moreover, undersampling has the potential of eliminating valuable samples from consideration of the classifier entirely \cite{undersampling_generalization}, so it may exacerbate this problem of lack of data. The obtained training set may vary greatly from one undersampling to another, this leads to a high variance of the learned model. Hence, the achievable complexity of the hypothesis set must be reduced to ensure a good generalization.
+		
+	\medskip
+	\subsubsection{Posterior Bias}
+		One goal of undersampling is to change the priori probabilities of the classes to make them more balanced. The classifier assumes that the features it encounters at testing follow the same distribution as the training set. This mismatch introduced by design is known as sampling selection bias \cite{sampling_bias} on posterior distribution.
+
+		\medskip
+		Let $(\mathcal{X}, \mathcal{Y})$ denote the pairs of feature vectors, $\mathbf{x} \in \mathbb{R}^n$,  and binary labels, $y \in \{0, 1\}$, contained in our original dataset. We assume that the number of samples labeled as zero is small compared with the number of samples in class one. Undersampling randomly removes points from the majority class, we describe this sampling with the binary random variable $S$, which takes the value 1 if a sample is selected.
+
+		\medskip
+		It is reasonable to assume that the selection is independent of the features given the class. Then, applying Bayes rule, the law of total probability and noting that the samples from the minority class are always selected we obtain
+		\begin{align*} \label{posterior}
+			p' = & P(y=0|\mathbf{x}, s=1)=  \frac{P(s=1|y=0, \mathbf{x})P(y=0|\mathbf{x})}{P(s=1|\mathbf{x})}=\notag\\
+					=&  \frac{P(y=0|\mathbf{x})}{P(y=0|\mathbf{x})+P(s=1|y=1)P(y=1|\mathbf{x})}=\notag\\
+=&\frac{p}{p+\beta(1-p)},
+		\end{align*}
+where $p$ and $p'$ denote the posterior probability of encountering a sample from the minority class when employing the original and the undersampled dataset respectively. Whereas $\beta$ denotes the probability of keeping a sample from the majority class.
+
+		\medskip
+		The posterior is highly affected by the rate of the sampling. As more samples are removed, the classification is more biased towards the minority class. Figure \ref{fig.:Undersampling_2D_Contour_Classification} shows the decision region of a naive Bayes classifier. As the training set is undersampled the region of points that are labeled as the minority class grows. The rate of undersampling not only influences the posterior bias, but also the algorithm's ability to generalize. Thus, $\beta$ should be chosen with care. Figure \ref{fig.:Undersampling_F1_Score} presents the average F1-score over different training sets. We observe that the score is concave and in this case the optimum occurs with $\beta=0.82$.
+
+			\begin{figure}
+				\includegraphics[scale=0.3]{Undersampling_2D_Contour_Classification}
+				\centering
+				\caption{Influence of undersampling on the classification region of a naive Bayes classifier trained with the Gaussian dataset. The area within each circle corresponds to the cluster of points that are classified as the minority class for a given undersampling rate.}
+				\label{fig.:Undersampling_2D_Contour_Classification}
+			\end{figure}
+			\begin{figure}
+				\includegraphics[scale=0.3]{Undersampling_F1_Score}
+				\centering
+				\caption{F1-score vs. undersampling rate.}
+				\label{fig.:Undersampling_F1_Score}
+			\end{figure}
+
+		\medskip
+		Another factor that strongly influences the posterior bias is class separability. The bias is higher when conditional distributions are similar across the classes\cite{undersampling_posterior}. To analyze this behaviour we reduced the problem to a one-dimensional setting, the results are depicted in Figure \ref{fig:Undersampling_posterior}. We confirm that undersampling shifts the posterior distribution in favor of the minority class. Nevertheless, the shift caused by $\beta$ is lower under the configuration with lower overlap.
+			\begin{figure}
+			     \centering
+			     \begin{subfigure}[b]{0.24\textwidth}
+			         \centering
+			         \includegraphics[width=\textwidth]{Undersampling_PosteriorBias}
+			         \caption{$|\mu_0 - \mu_1|=3$.}
+			         \label{fig:Undersampling_PosteriorBias}
+			     \end{subfigure}
+			     \hfill
+			     \begin{subfigure}[b]{0.24\textwidth}
+			         \centering
+			         \includegraphics[width=\textwidth]{Undersampling_PosteriorBias_Separated}
+			         \caption{$|\mu_0 - \mu_1|=13$.}
+			         \label{fig:Undersampling_2D_UndersampledDataset}
+			     \end{subfigure}
+			        \caption{Influence of undersampling on posterior probability of the minority class.}
+			        \label{fig:Undersampling_posterior}
+			\end{figure}
+		
+
+	\subsection{Oversampling}
+
+	\subsection{Cost-Sensitive Techniques}
+	Blabla
 
 \section{Classification impact on Real Data}
 Blabla 
@@ -253,38 +367,7 @@ an ``e'' after the ``g''. Avoid the stilted expression ``one of us (R. B.
 G.) thanks $\ldots$''. Instead, try ``R. B. G. thanks$\ldots$''. Put sponsor 
 acknowledgments in the unnumbered footnote on the first page.
 
-\section*{References}
-
-Please number citations consecutively within brackets \cite{b1}. The 
-sentence punctuation follows the bracket \cite{b2}. Refer simply to the reference 
-number, as in \cite{b3}---do not use ``Ref. \cite{b3}'' or ``reference \cite{b3}'' except at 
-the beginning of a sentence: ``Reference \cite{b3} was the first $\ldots$''
-
-Number footnotes separately in superscripts. Place the actual footnote at 
-the bottom of the column in which it was cited. Do not put footnotes in the 
-abstract or reference list. Use letters for table footnotes.
-
-Unless there are six authors or more give all authors' names; do not use 
-``et al.''. Papers that have not been published, even if they have been 
-submitted for publication, should be cited as ``unpublished'' \cite{b4}. Papers 
-that have been accepted for publication should be cited as ``in press'' \cite{b5}. 
-Capitalize only the first word in a paper title, except for proper nouns and 
-element symbols.
-
-For papers published in translation journals, please give the English 
-citation first, followed by the original foreign-language citation \cite{b6}.
-
-\begin{thebibliography}{00}
-\bibitem{b1} G. Eason, B. Noble, and I. N. Sneddon, ``On certain integrals of Lipschitz-Hankel type involving products of Bessel functions,'' Phil. Trans. Roy. Soc. London, vol. A247, pp. 529--551, April 1955.
-\bibitem{b2} J. Clerk Maxwell, A Treatise on Electricity and Magnetism, 3rd ed., vol. 2. Oxford: Clarendon, 1892, pp.68--73.
-\bibitem{b3} I. S. Jacobs and C. P. Bean, ``Fine particles, thin films and exchange anisotropy,'' in Magnetism, vol. III, G. T. Rado and H. Suhl, Eds. New York: Academic, 1963, pp. 271--350.
-\bibitem{b4} K. Elissa, ``Title of paper if known,'' unpublished.
-\bibitem{b5} R. Nicole, ``Title of paper with only first word capitalized,'' J. Name Stand. Abbrev., in press.
-\bibitem{b6} Y. Yorozu, M. Hirano, K. Oka, and Y. Tagawa, ``Electron spectroscopy studies on magneto-optical media and plastic substrate interface,'' IEEE Transl. J. Magn. Japan, vol. 2, pp. 740--741, August 1987 [Digests 9th Annual Conf. Magnetics Japan, p. 301, 1982].
-\bibitem{b7} M. Young, The Technical Writer's Handbook. Mill Valley, CA: University Science, 1989.
-\end{thebibliography}
 \vspace{12pt}
-\color{red}
-IEEE conference templates contain guidance text for composing and formatting conference papers. Please ensure that all template text is removed from your conference paper prior to submission to the conference. Failure to remove the template text from your paper may result in your paper not being published.
 
+\bibliographystyle{ieeetr} \bibliography{ECE6254_references}
 \end{document}
