Updating Math font

--- a/WriteUp/report.tex
+++ b/WriteUp/report.tex
@@ -18,6 +18,10 @@
 \SetKwInput{KwInput}{Input}                % Set the Input
 \SetKwInput{KwOutput}{Output}              % set the Output
 
+% Math font
+%\usepackage{mathpazo}
+\usepackage{fourier} 
+
 % Enable subfigures
 \graphicspath{ {./pictures/} }
 \usepackage{subcaption}
