--- a/WriteUp/report.tex
+++ b/WriteUp/report.tex
@@ -64,10 +64,8 @@ imbalance
 	\subsection{Motivation}
 	Many canonical machine learning algorithms used for classification assume that the number of objects in the respective classes is roughly the same. However, in reality, classes are rarely represented equally. In fact, class distribution skews are not only common, but many times expected \cite{data_imbalance_overview}, especially in decision systems aiming to detect rare but important cases. For instance, Covid-19 testing at Georgia Institute of Technology showed that less than 1\% of the samples contained the virus. This means that a naive classifier could achieve a 99\% accuracy just by labeling all samples as negative for Covid-19.
 	
-	\medskip
 Imbalanced datasets significantly compromise the performance of many traditional learning algorithms. The disparity of classes in the training dataset may lead the algorithm to bias the classification towards the class with more instances, or even to ignore the minority class altogether. Therefore, it is vital to find efficient ways of dealing with data imbalances.
 
-	\medskip
 	The overall goal of our project is to provide an overview of the state-of-the-art approaches to solve the issues introduced by imbalanced datasets. Including, a performance comparison of the various techniques. We also aim to implement an efficient scheme that is able to deal with highly complex and imbalanced datasets.
 
 
@@ -96,10 +94,8 @@ Imbalanced datasets significantly compromise the performance of many traditional
 				\end{pmatrix}
 			\end{equation*} and where the minority class only accounts for 15\% of the samples. This simple dataset is especially useful to analyze the imbalance-compensating techniques from a mathematical perspective. Not only do we study the concepts learnt in class at a theoretical level, but we also use plugin machine learning models to illustrate how they affect density distributions.
 
-		\medskip
-		Secondly, we target a more complex dataset. 
+		Secondly, we target a more complex dataset.  TODO
 
-		\medskip
 		The performance of the classification will be evaluated using the $F_1$ score $\in [0, 1]$, where the best possible score is 1. This metric is computed as
 			\begin{equation*}
 				F_1 = 2\frac{\mathrm{precision}\times\mathrm{recall}}{\mathrm{precision}+\mathrm{recall}},
@@ -131,18 +127,15 @@ where the precision is the ratio between correctly identified minority samples a
 			        \label{fig:Undersampling_2D_OriginalHistograms}
 			\end{figure}
 
-	\medskip
+	%\medskip
 	\subsubsection{Generalization Ability}
 		Induction algorithms require a sufficient amount of data to learn a model that generalizes well.  If the training set is not large, a classifier may just memorize the characteristics of the training data. Moreover, undersampling has the potential of eliminating valuable samples from consideration of the classifier entirely \cite{undersampling_generalization}, so it may exacerbate this problem of lack of data. The obtained training set may vary greatly from one undersampling to another, this leads to a high variance of the learned model. Hence, the achievable complexity of the hypothesis set must be reduced to ensure a good generalization.
 		
-	\medskip
 	\subsubsection{Posterior Bias}
 		One goal of undersampling is to change the priori probabilities of the classes to make them more balanced. The classifier assumes that the features it encounters at testing follow the same distribution as the training set. This mismatch introduced by design is known as sampling selection bias \cite{sampling_bias} on posterior distribution.
 
-		\medskip
 		Let $(\mathcal{X}, \mathcal{Y})$ denote the pairs of feature vectors, $\mathbf{x} \in \mathbb{R}^n$,  and binary labels, $y \in \{0, 1\}$, contained in our original dataset. We assume that the number of samples labeled as zero is small compared with the number of samples in class one. Undersampling randomly removes points from the majority class, we describe this sampling with the binary random variable $S$, which takes the value 1 if a sample is selected.
 
-		\medskip
 		It is reasonable to assume that the selection is independent of the features given the class. Then, applying Bayes rule, the law of total probability and noting that the samples from the minority class are always selected we obtain
 		\begin{align*} \label{posterior}
 			p' = & P(y=0|\mathbf{x}, s=1)=  \frac{P(s=1|y=0, \mathbf{x})P(y=0|\mathbf{x})}{P(s=1|\mathbf{x})}=\notag\\
@@ -151,7 +144,6 @@ where the precision is the ratio between correctly identified minority samples a
 		\end{align*}
 where $p$ and $p'$ denote the posterior probability of encountering a sample from the minority class when employing the original and the undersampled dataset respectively. Whereas $\beta$ denotes the probability of keeping a sample from the majority class.
 
-		\medskip
 		The posterior is highly affected by the rate of the sampling. As more samples are removed, the classification is more biased towards the minority class. Figure \ref{fig.:Undersampling_2D_Contour_Classification} shows the decision region of a naive Bayes classifier. As the training set is undersampled the region of points that are labeled as the minority class grows. The rate of undersampling not only influences the posterior bias, but also the algorithm's ability to generalize. Thus, $\beta$ should be chosen with care. Figure \ref{fig.:Undersampling_F1_Score} presents the average F1-score over different training sets. We observe that the score is concave and in this case the optimum occurs with $\beta=0.82$.
 
 			\begin{figure}
@@ -166,8 +158,6 @@ where $p$ and $p'$ denote the posterior probability of encountering a sample fro
 				\caption{F1-score vs. undersampling rate.}
 				\label{fig.:Undersampling_F1_Score}
 			\end{figure}
-
-		\medskip
 		Another factor that strongly influences the posterior bias is class separability. The bias is higher when conditional distributions are similar across the classes\cite{undersampling_posterior}. To analyze this behaviour we reduced the problem to a one-dimensional setting, the results are depicted in Figure \ref{fig:Undersampling_posterior}. We confirm that undersampling shifts the posterior distribution in favor of the minority class. Nevertheless, the shift caused by $\beta$ is lower under the configuration with lower overlap.
 			\begin{figure}
 			     \centering
@@ -195,13 +185,16 @@ where $p$ and $p'$ denote the posterior probability of encountering a sample fro
 	Blabla
 
 \section{Classification impact on Real Data}
-Blabla 
+Ensemble of classifiers are known to improve the performance of single classifiers in imbalanced datasets [A Review on Ensembles for the Class Imbalance] by combining separate weak learners into a composite whole. Both bagging and boosting algorithms have been implemented from scratch to explore their advantages and compare them with highly-effective classifiers such as XGBoost. 
 
 \subsection{Bagging}
 Blabla
 
+\break
 \subsection{AdaBoost}
-Blabla
+Unlike bagging, boosting fits the weak learners in an adaptive way: a different significance is assigned to each of the base learners based on the samples that were misclassified in the previous model. In particular, the AdaBoost algorithm stands out in the field of ensemble learning [Cost-sensitive boosting algorithms: Do we really need them?]. One its main advantages is the versatility to incorporate cost-sensitive techniques. We have implemented our a custom AdaBoost classifier to enables us to gain control over the algorithm at a lower level, make adjustments if necessary and create other Adaboost-based classifiers such as AdaCost or Boosted SVM. 
+
+This custom implementation uses single decision trees with 2 leaf nodes and. It is given the number of maximum iterations (weak learners) that will be fitted, and a dataset $D$ formed by N training samples, each constituted by a feature vector $\boldsymbol{x}_i$ and a binary label $y_i$. For each iteration, we create the weak classifier based on the weighted training samples. For the first iteration, we allocate the same weight for all the samples ($1/N$). Once the simple decision trees has been created, we predict the class of every training sample and compute the weighted misclassification error $\epsilon_t$ for that decision tree. Its significance $\alpha_t$ is calculated based on that error and finally the weights of each training samples are updated depending on the signficance and whether the sample was correctly classified or not. Note that the weights are increased $e^{\alpha}$ times if the sample is misclassified or decreased by $e^{-\alpha}$ if correctly classified, with  $\alpha_t \in [0,1]$ because $\epsilon_t \in [0,0.5]$. The algorithm is fully detailed below.
 
 \begin{algorithm}
   
@@ -229,7 +222,7 @@ Blabla
 	
 	\tcc{Update Weights}
 	  
-	 $W_{t+1}(i) = W_t(i)\dot e^{(-\alpha_th_t(x_i)y_i)}$ for $i=1,\dots,N$
+	 $W_{t+1}(i) = W_t(i) e^{(-\alpha_th_t(x_i)y_i)}$ for $i=1,\dots,N$
 	 
 	 Normalize $W_{t+1}$ such that $\sum^N_{i=1}W_{t+1}(i)=1$
 	  
@@ -238,6 +231,12 @@ Blabla
 
 \caption{AdaBoost Algorithm}
 \end{algorithm}
+
+
+---- Mathematical implications ----
+
+
+
 
 \subsection{AdaCost}
 Blabla
@@ -272,7 +271,7 @@ Blabla
 	
 	\tcc{Update Weights}
 	  
-	 $W_{t+1}(i) = W_t(i)\dot e^{(-\alpha_th_t(x_i)y_i)}$ for $i=1,\dots,N$
+	 $W_{t+1}(i) = W_t(i) e^{(-\alpha_th_t(x_i)y_i)}$ for $i=1,\dots,N$
 	 
 	 Normalize $W_{t+1}$ such that $\sum^N_{i=1}W_{t+1}(i)=1$
 	 }
@@ -287,6 +286,7 @@ Blabla
 Blabla
 
 \section{Results and Discussion}
+Finally, we have combined them with downsampling to explore the effectiveness of hybrid algorithms.
 Blabla 
 
 \section{Conclusions}
