Removing .gz and correcting minor errors in WriteUp

--- a/WriteUp/report.tex
+++ b/WriteUp/report.tex
@@ -192,9 +192,9 @@ Blabla
 
 \break
 \subsection{AdaBoost}
-Unlike bagging, boosting fits the weak learners in an adaptive way: a different significance is assigned to each of the base learners based on the samples that were misclassified in the previous model. In particular, the AdaBoost algorithm stands out in the field of ensemble learning [Cost-sensitive boosting algorithms: Do we really need them?]. One its main advantages is the versatility to incorporate cost-sensitive techniques. We have implemented our a custom AdaBoost classifier to enables us to gain control over the algorithm at a lower level, make adjustments if necessary and create other Adaboost-based classifiers such as AdaCost or Boosted SVM. 
+Unlike bagging, boosting fits the weak learners in an adaptive way: a different significance is assigned to each of the base learners based on the samples that were misclassified in the previous model. In particular, the AdaBoost algorithm stands out in the field of ensemble learning [Cost-sensitive boosting algorithms: Do we really need them?]. One its main advantages is the versatility to incorporate cost-sensitive techniques. We implemented a custom AdaBoost classifier that enables us to gain control over the algorithm at a lower level, make adjustments when necessary and create other Adaboost-based classifiers such as AdaCost or Boosted SVM. 
 
-This custom implementation uses single decision trees with 2 leaf nodes and. It is given the number of maximum iterations (weak learners) that will be fitted, and a dataset $D$ formed by N training samples, each constituted by a feature vector $\boldsymbol{x}_i$ and a binary label $y_i$. For each iteration, we create the weak classifier based on the weighted training samples. For the first iteration, we allocate the same weight for all the samples ($1/N$). Once the simple decision trees has been created, we predict the class of every training sample and compute the weighted misclassification error $\epsilon_t$ for that decision tree. Its significance $\alpha_t$ is calculated based on that error and finally the weights of each training samples are updated depending on the signficance and whether the sample was correctly classified or not. Note that the weights are increased $e^{\alpha}$ times if the sample is misclassified or decreased by $e^{-\alpha}$ if correctly classified, with  $\alpha_t \in [0,1]$ because $\epsilon_t \in [0,0.5]$. The algorithm is fully detailed below.
+This custom implementation uses single decision trees with 2 leaf nodes. It is given the number of maximum iterations (weak learners) that will be fitted, and a dataset $D$ formed by N training samples, each constituted by a feature vector $\boldsymbol{x}_i$ and an associated binary label $y_i$. For each iteration, a weak classifier is created using the weighted training samples. For the first iteration, we allocate the same weight for all the samples ($1/N$). Once the decision tree has been created, we predict the class of the training samples and compute the weighted misclassification error $\epsilon_t$. Then, the significance $\alpha_t$ is calculated based on the error. Finally, the weights of each training samples are updated depending on the significance and whether the sample was correctly classified or not. Note that the weights are increased by $e^{\alpha}$ if the sample is misclassified or decreased by $e^{-\alpha}$ if correctly classified, with  $\alpha_t \in [0,1]$ because $\epsilon_t \in [0,0.5]$. The algorithm is fully detailed below.
 
 \begin{algorithm}
   
